Fix weird collapsing on small screen sizes

--- a/packages/web/src/components/track/GiantTrackTile.module.css
+++ b/packages/web/src/components/track/GiantTrackTile.module.css
@@ -409,6 +409,16 @@
   stroke: var(--static-white) !important;
 }
 
+.premiumContentSectionDescription > div {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.premiumContentSectionDescription > div > span {
+  flex-shrink: 0;
+}
+
 .premiumContentSectionDescription .spinner {
   margin-right: 8px;
   height: 24px;
